--- a/training.css
+++ b/training.css
@@ -2,16 +2,19 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 body {
-    background-image: url("background.jpg");
-    background-color: #E5E4E2;
+    background-image: url("background3.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-color: #000000;
     font-weight: 700;
     font-family: 'Raleway', sans-serif;
+    color: white;
     display: flex;
     flex-direction: column;
 }
 .motto {
     /*color: white;*/
-    color:black;
+    color: white;
     font-size: 35px;
     text-align: center;
     margin: 30px;
@@ -24,7 +27,7 @@ a {
     font-size: 20px;
 }
 a:link, a:visited {
-    color:black;
+    color: white;
     text-decoration: none;
 }
 a:active {
