--- a/programs.css
+++ b/programs.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 
 body {
-    background-image: url("background.jpg");
-    background-color: #E5E4E2;
+    background-image: url("background3.png");
+    background-color: #000000;
     font-weight: 700;
     font-family: 'Raleway', sans-serif;
     display: flex;
