--- a/nutrition.css
+++ b/nutrition.css
@@ -4,14 +4,15 @@
 body {
     background-image: url("background3.png");
     background-color: #000000;
+    background-repeat: no-repeat;
+    background-size: 100%;
     font-weight: 700;
     font-family: 'Raleway', sans-serif;
     display: flex;
     flex-direction: column;
 }
 .motto {
-    /*color: white;*/
-    color:black;
+    color: white;
     font-size: 35px;
     text-align: center;
     margin: 30px;
