--- a/programs.css
+++ b/programs.css
@@ -10,6 +10,7 @@ body {
     font-family: 'Raleway', sans-serif;
     display: flex;
     flex-direction: column;
+    color: #FFFFFF;
 }
 .motto {
     color: white;
